--- a/src/TripComponent/trip.module.css
+++ b/src/TripComponent/trip.module.css
@@ -11,13 +11,43 @@
 }
 
 .trip:hover {
-    animation-name: grow;
+    animation-name: shrink;
     animation-duration: 0.1s;
     animation-fill-mode: forwards;
 }
 
-@keyframes grow {
+@keyframes shrink {
     to {
       transform: scale(.95);
+    }
+}
+
+.trip::after{
+    content: "";
+    position: absolute;
+    left: -6px;
+    border-radius: 50%;
+    background-color: black;
+
+    animation-name: exhaust;
+    animation-duration: 5s;
+    animation-delay: 4s;
+    animation-iteration-count: infinite;
+
+    top: 20%;
+}
+
+@keyframes exhaust {
+    0% {
+        height: 5px;
+        width: 5px;
+        opacity: 100%;
+    }
+    /* Effectively a 4s pause between animations */
+    20%, 100% {
+        height: 10px;
+        width: 10px;
+        opacity: 0%;
+        translate: -3px -3px;
     }
 }
